--- a/entry.html
+++ b/entry.html
@@ -49,7 +49,7 @@
             </div>
             <div class='row' id='about'>
                 <div class='col' >
-                    <img src='IMG_7272.jpg'>
+                    <img src='IMG_7272.JPG'>
                 </div>
                 <div id='bio' class='col'>
                     <br>
@@ -106,31 +106,31 @@
                       </ol>
                       <div class="carousel-inner">
                         <div class="carousel-item active" align="center">
-                          <img class="d-block" src="IMG_7272.jpg" alt="First slide">
+                          <img class="d-block" src="IMG_7272.JPG" alt="First slide">
                         </div>
                         <div class="carousel-item" align="center">
-                          <img class="d-block" src="IMG_7273.jpg" alt="Second slide">
+                          <img class="d-block" src="IMG_7273.JPG" alt="Second slide">
                         </div>
                         <div class="carousel-item" align="center">
-                          <img class="d-block" src="IMG_7274.jpg" alt="Third slide">
+                          <img class="d-block" src="IMG_7274.JPG" alt="Third slide">
                         </div>
                         <div class="carousel-item" align="center">
-                          <img class="d-block" src="IMG_7275.jpg" alt="Fourth slide">
+                          <img class="d-block" src="IMG_7275.JPG" alt="Fourth slide">
                         </div>
                         <div class="carousel-item" align="center">
-                          <img class="d-block" src="IMG_7276.jpg" alt="Fifth slide">
+                          <img class="d-block" src="IMG_7276.JPG" alt="Fifth slide">
                         </div>
                         <div class="carousel-item" align="center">
-                          <img class="d-block" src="IMG_7277.jpg" alt="Sixth slide">
+                          <img class="d-block" src="IMG_7277.JPG" alt="Sixth slide">
                         </div>
                         <div class="carousel-item" align="center">
-                          <img class="d-block" src="IMG_7278.jpg" alt="Seventh slide">
+                          <img class="d-block" src="IMG_7278.JPG" alt="Seventh slide">
                         </div>
                         <div class="carousel-item" align="center">
-                          <img class="d-block" src="IMG_7279.jpg" alt="Eigth slide">
+                          <img class="d-block" src="IMG_7279.JPG" alt="Eigth slide">
                         </div>
                         <div class="carousel-item" align="center">
-                          <img class="d-block" src="IMG_7280.jpg" alt="Ninth slide">
+                          <img class="d-block" src="IMG_7280.JPG" alt="Ninth slide">
                         </div>
                       </div>
                       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
